<?xml version="1.0"?>
<package format="2">
  <name>franka_simulation</name>
  <version>0.0.0</version>
  <description>The franka_simulation package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="ochoa@todo.todo">ochoa</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/franka_simulation</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>joint_trajectory_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>spacenav_node</build_depend>

  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>controller_manager_msgs</build_export_depend>
  <build_export_depend>effort_controllers</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>joint_trajectory_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>spacenav_node</build_export_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>spacenav_node</exec_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/panda_controllers_plugin.xml"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>
