<?xml version="1.0"?>
<package format="2">
  <name>franka_spacenav</name>
  <version>0.0.0</version>
  <description>The franka_spacenav package</description>

  <maintainer email="ochoa@todo.todo">ochoa</maintainer>

  <license>TODO</license>

  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>spacenav_node</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>

  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>spacenav_node</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>


  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>franka_hw</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>actionlib</depend>


  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>panda_moveit_config</exec_depend>
  <exec_depend>spacenav_node</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/franka_spacenav_controllers_plugin.xml"/>
  </export>

</package>
